--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "nodemon sleep-system.ts"
+    "start": "nodemon app.ts"
   },
   "dependencies": {
     "@types/body-parser": "^1.19.5",
